--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,8 @@ Note that changes to the GNU SASL Library is documented in lib/NEWS.
 This file track changes to the remaining, non-library, parts of GNU
 SASL.  That include the manual, the command line tool, and self tests.
 
+* Version 0.2.9 (unreleased)
+
 * Version 0.2.8 (released 2005-09-08)
 
 ** The gsasl tool now support STARTTLS for IMAP and SMTP using GnuTLS.
