--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,8 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 0.2.9 (unreleased)
 
+** Update of gnulib files.
+
 * Version 0.2.8 (released 2005-09-08)
 
 ** The gsasl tool now support STARTTLS for IMAP and SMTP using GnuTLS.
