--- a/lib/NEWS
+++ b/lib/NEWS
@@ -4,6 +4,9 @@ See the end for copying conditions.
 
 * Version 0.2.9 (unreleased)
 
+** Gnulib is now used for crypto functions.
+Libgcrypt can still optionally be used through --with-libgcrypt.
+
 ** API and ABI modifications.
 No changes since last version.
 
