--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,9 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 0.2.10 (unreleased)
 
+** Work around bug in GnuTLS that made the command line tool exit after
+** failing to write a zero length message to the peer.
+
 ** Update of gnulib files.
 
 * Version 0.2.9 (released 2005-10-07)
