--- a/doc/gsasl.texi
+++ b/doc/gsasl.texi
@@ -91,9 +91,10 @@ Indices
 @chapter Introduction
 
 GNU SASL is an implementation of the Simple Authentication and
-Security Layer framework and a few common SASL mechanisms.  @acronym{SASL} is
-used by network servers (e.g., IMAP, SMTP) to request authentication
-from clients, and in clients to authenticate against servers.
+Security Layer framework and a few common SASL mechanisms.
+@acronym{SASL} is used by network servers (e.g., @acronym{IMAP},
+@acronym{SMTP}) to request authentication from clients, and in clients
+to authenticate against servers.
 
 GNU SASL consists of a library (`libgsasl'), a command line utility
 (`gsasl') to access the library from the shell, and a manual.  The
